--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,21 @@
   "name": "c2cserver",
   "version": "1.0.0",
   "description": "backend server for car2car application",
-  "main": "start.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Melvin Yit",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.587.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.0",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "mysql": "^2.17.1",
+    "passport": "^0.4.1",
+    "path": "^0.12.7"
+  }
 }
