--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "passport": "^0.4.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^3.3.3"
   }
 }
