--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "otplib": "^11.0.1",
     "passport": "^0.4.1",
     "path": "^0.12.7",
+    "qrcode": "^1.4.4",
     "uuid": "^3.3.3"
   }
 }
