--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.4.1",
     "path": "^0.12.7",
     "qrcode": "^1.4.4",
+    "request": "^2.88.0",
     "uuid": "^3.3.3",
     "web-push": "^3.4.3"
   }
