--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "backend server for car2car application",
   "main": "main.js",
   "scripts": {
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Melvin Yit",
