--- a/client/c2c-app/src/manifest.json
+++ b/client/c2c-app/src/manifest.json
@@ -6,6 +6,7 @@
   "display": "browser",
   "Scope": "/c2c-app/",
   "start_url": "/c2c-app",
+  "gcm_sender_id": "103953800507",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
